// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Service getUserWithoutSecret return without secrets 1`] = `
Object {
  "_id": "635132a527c9bfb8fc7c758e",
  "active": true,
  "email": "user@beta.gouv.fr",
  "firstName": "",
  "lastName": "",
  "profileToComplete": false,
  "roles": Array [
    "user",
  ],
  "signupAt": 2022-01-01T00:00:00.000Z,
}
`;

exports[`User Service validateUserActivationInfo() agentType should throw if agentType is wrong 1`] = `
Object {
  "error": [Error: Mauvaise valeur pour le type d'agent.
Les valeurs possibles sont OPERATOR, CENTRAL_ADMIN, TERRITORIAL_COLLECTIVITY, DECONCENTRATED],
  "valid": false,
}
`;

exports[`User Service validateUserActivationInfo() password should throw password is wrong 1`] = `
Object {
  "error": [Error: Password is too weak, please use this rules:
At least one digit [0-9]
At least one lowercase character [a-z]
At least one uppercase character [A-Z]
At least one special character [*.!@#$%^&(){}[]:;<>,.?/~_+-=|\\\\]
At least 8 characters in length, but no more than 32.],
  "valid": false,
}
`;

exports[`User Service validateUserActivationInfo() structure should throw an error 1`] = `
Object {
  "error": [Error: Mauvaise valeur pour la structure.],
  "valid": false,
}
`;

exports[`User Service validateUserActivationInfo() territorialScope should throw an error 1`] = `
Object {
  "valid": true,
}
`;

exports[`User Service validateUserActivationInfo() typeJob should throw an error 1`] = `
Object {
  "error": [Error: Mauvaise valeur pour le type d'agent.
Les valeurs possibles sont OPERATOR, CENTRAL_ADMIN, TERRITORIAL_COLLECTIVITY, DECONCENTRATED],
  "valid": false,
}
`;
